@@ -174,6 +174,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   labels for custom restriction levels
 * Show edit count in user preferences
 * Improved support for audio/video extensions
+* (bug 10937) Distinguish overwritten files in upload log
 
 == Bugfixes since 1.10 ==
 
